--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
         <h2 class="title-about padding-top">
           Как я работаю
         </h2>
-        <p class="title-lorem center">
+        <p class="title-lorem center margin-bottom">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
         </p>
-          <video
-          class="video center .text-align"
-          controls 
-          src="/video/42.mp4">
-            Ваш браузер устарел
-          </video>
+        <video
+        class="video center text-align"
+        controls 
+        src="/video/42.mp4">
+          Ваш браузер устарел
+        </video>
       </section>
     </main>
     <footer class="footer center ">
